src/component/collapsible/snapshots/envision__component__collapsible__tests__view_collapsed.snap
---
source: src/component/collapsible/tests.rs
assertion_line: 633
expression: terminal.backend().to_string()
---
▸ Details
