src/component/collapsible/snapshots/envision__component__collapsible__tests__view_disabled.snap
---
source: src/component/collapsible/tests.rs
expression: terminal.backend().to_string()
---
▾ Details                               
│                                       
│                                       
│                                       
│                                       
└───────────────────────────────────────
