src/component/collapsible/snapshots/envision__component__collapsible__tests__view_focused_collapsed.snap
---
source: src/component/collapsible/tests.rs
assertion_line: 677
expression: terminal.backend().to_string()
---
▸ Details
