src/component/collapsible/snapshots/envision__component__collapsible__tests__view_height_one.snap
---
source: src/component/collapsible/tests.rs
assertion_line: 706
expression: terminal.backend().to_string()
---
▾ Details
